fix: scroll content not full visible in iframe

--- a/src/core/components/ChatView.module.css
+++ b/src/core/components/ChatView.module.css
@@ -136,7 +136,7 @@
 }
 
 #scrollContent {
-  margin-top: 100px;
+  margin-top: 60px;
   flex-grow: 1;
   width: 100%;
   align-items: center;
